...
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginHorizontal="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_nome_movimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="Nome"
            android:textColor="@color/black" />

...
            android:textColor="@color/black" />

    </LinearLayout>


    <ImageView
        android:id="@+id/image_view_cancella_movimento"
        android:clickable="true"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginHorizontal="5dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_delete" />
...
