...
        android:id="@+id/layout_toolbar"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_aggiungi_movimento_conto"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <LinearLayout
...
                android:textColor="@color/black"
                android:textSize="20dp" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_view_movimenti_conto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="@drawable/border_light" />

    </LinearLayout>
...
